Finished working on the body

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Profile Page</title>
 </head>
 <body>
-    
+    <h1>Abdul-Raqeeb Olaleye</h1>
+    <p>My name is Abdul-Raqeeb Olaleye. I am a student in the University of Mnaitoba studying Computer Science. My picture is shown below:</p>
+    <img src = "./My Picture.jpg" alt="A portrait picture of me"/>
+
+    <p>
+        My hobbies are:
+        <ul>
+           <li> Watching Football matches </li>
+          <li>  Paying video games</li>
+            <li> Reading </li>
+            <li>Solving problems and so on</li>
+        </ul>
+    </p>
+
+    <a href="/contact.html"> My Contact Page</a>
 </body>
 </html>
