Edited file directory

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         </ul>
     </p>
 
-    <a href="/contact.html"> My Contact Page</a>
+    <a href="./contact.html"> My Contact Page</a>
 </body>
 </html>
