added css to it

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,16 @@
+<style>
+  #middlealign{
+    text-align: center;
+    color: burlywood;
+  }
+  body{
+    background-color: cornsilk;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+</style>
+<body>
 
-<h1>Contact Me</h1>
+<h1 id = "middlealign">Contact Me</h1>
 <p>Tel: (431) 294-5680</p>
 <p>Email: raqeebolasubomii@gmail.com</p>
 <p>Address:</p>
@@ -13,3 +24,7 @@
 <p>Github Profile:</p>
 
 <a href="https://github.com/Subomi23">Github Profile</a>
+<p>
+<a href="./index.html">Back to my profile</a>
+</p>
+</body>
