--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Profile Page</title>
+    <style>
+#middlealign{
+    text-align: center;
+
+}
+body{
+    background-color: blanchedalmond;
+    font-family: cursive;
+    font-size: 18px;
+}
+#red{
+    color: red;
+}
+#green{
+    color: black;
+}
+#img{
+    height: 600px;
+    padding: 100px;
+    border: 10px solid gray;
+    background-color: cornsilk;
+}
+    </style>
 </head>
 <body>
-    <h1>Abdul-Raqeeb Olaleye</h1>
-    <p>My name is Abdul-Raqeeb Olaleye. I am a student in the University of Mnaitoba studying Computer Science. My picture is shown below:</p>
-    <img src = "./My Picture.jpg" height="500" alt="A portrait picture of me"/>
+    <h1 id="middlealign">MY PROFILE</h1>
+    <p>My name is Abdul-Raqeeb Olaleye. I am a student in the University of Mnaitoba studying Computer Science. I am Motivated Computer Science student at the University of Manitoba with strong foundational skills in programming, problem-solving, and software development. Passionate about building efficient, user-focused solutions and continuously expanding technical knowledge. Demonstrates solid communication, adaptability, and teamwork through academic and personal projects. Currently pursuing further experience in real-world development environments to apply and enhance technical skills.</p>
+    <img src = "./My Picture.jpg" height="500" alt="A portrait picture of me" id="img"/>
 
     <p>
         My hobbies are:
@@ -16,10 +39,17 @@
            <li> Watching Football matches </li>
           <li>  Paying video games</li>
             <li> Reading </li>
+            <li>Coding personal projects</li>
+            <li>Exploring new technology</li>
             <li>Solving problems and so on</li>
         </ul>
     </p>
 
-    <a href="./contact.html"> My Contact Page</a>
+My resume is:
+    <a href="https://subomi23.github.io/Simple-Resume-Page/" id="red">Resume</a>
+    <hr />
+<p >
+    <a href="./contact.html" id="green"> My Contact Page</a>
+    </p>
 </body>
 </html>
